Fix sidebar navigation arrow and flip it on collapse

--- a/features/layout/sidebar-navigation/menu-item-link.module.scss
+++ b/features/layout/sidebar-navigation/menu-item-link.module.scss
@@ -29,4 +29,8 @@
 .icon {
   width: space.$s6;
   margin-right: space.$s3;
+
+  &.isCollapsed {
+    transform: scaleX(-1);
+  }
 }
